--- a/1.html
+++ b/1.html
@@ -19,7 +19,7 @@
 	<strong>creating <u>web</u> pages</strong><br>
 	and web applications.<br><br><br>
 
-	<img src="coding.jpg" width="100%">
+	<!-- <img src="coding.jpg" width="100%"> -->
 
 	<h1>HTML</h1>
 	Hypertext Markup Language (HTML) is the standard markup languge for</p>
